@@ -21,5 +21,6 @@ pm_to_blib
 README
 README.pod
 t/ipc_srlock*
+t/script.log
 *.tar.gz
 Async-IPC-*
