@@ -1,8 +1,39 @@
 use t::boilerplate;
 
 use Test::More;
+use Class::Usul::Programs;
+use Class::Usul::Functions qw( sum );
 
 use_ok 'Async::IPC';
+
+my $max_calls   = 10;
+my $results     = {};
+my $prog        =  Class::Usul::Programs->new
+   (  config    => { appclass => 'Class::Usul', tempdir => 't' }, noask => 1, );
+my $factory     =  Async::IPC->new( builder => $prog );
+my $loop        =  $factory->loop;
+my $function    =  $factory->new_notifier
+   (  code      => sub { shift; sum @_ },
+      desc      => 'description',
+      key       => 'key',
+      max_calls => $max_calls,
+      on_exit   => sub { $loop->stop },
+      on_return => sub { $results->{ $_[ 0 ] } = $_[ 1 ] },
+      type      => 'function' );
+
+for (my $i = 0; $i < $max_calls; $i++) {
+   my @args = 1; my $n = 0; while ($n <= $i) { $args[ $n + 1 ] = $n + 2; $n++ }
+
+   $function->call( (sum @args), @args );
+}
+
+$loop->start;
+
+for (sort { $a <=> $b } keys %{ $results }) {
+   is $results->{ $_ }, $_, "sum ${_}";
+}
+
+my $count = () = keys %{ $results }; warn "Results ${count}\n";
 
 done_testing;
 
