@@ -6,6 +6,7 @@ use File::Spec::Functions qw( catdir updir );
 use FindBin               qw( $Bin );
 use lib               catdir( $Bin, updir, 'lib' ), catdir( $Bin, 'lib' );
 
+use English qw( -no_match_vars );
 use Test::More;
 use Test::Requires { version => 0.88 };
 use Module::Build;
@@ -18,6 +19,9 @@ BEGIN {
    $builder and $notes = $builder->notes;
    $perl_ver  = $notes->{min_perl_version} || 5.008;
    $Bin =~ m{ : .+ : }mx and plan skip_all => 'Two colons in $Bin path';
+
+   my $osname = lc $OSNAME; ($osname eq 'mswin32' or $osname eq 'cygwin')
+      and plan skip_all => 'OS unsupported';
 }
 
 use Test::Requires "${perl_ver}";
